--- a/style.css
+++ b/style.css
@@ -39,7 +39,9 @@ span { font-weight: bold; }
 
 .duvida img { position: absolute; top: 32px; right: 24px; }
 
-.duvida .paragrafo { border-right: 1px solid #ff9b6c; border-bottom: 1px solid #ff9b6c; border-left: 1px solid #ff9b6c; border-radius: 0 0 8px 8px; margin-top: -8px; padding: 24px; }
+.duvida .paragrafo { border-right: 1px solid #ff9b6c; border-bottom: 1px solid #ff9b6c; border-left: 1px solid #ff9b6c; border-radius: 0 0 8px 8px; margin-top: -8px; padding: 0px 24px; height: 0; overflow: hidden; opacity: 0;}
+
+.duvida.ativa .paragrafo { height: fit-content; opacity: 1; padding: 24px; }
 
 footer { background-color: rgb(255, 152, 108, 0.25); display: flex; gap: 250px; padding: 64px 90px; justify-content: space-between;}
 
