--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ span { font-weight: bold; }
 
 #farmacia .paragrafo { max-width: 1200px; margin: 0px auto; text-align: justify; }
 
-#duvidas { display: flex; align-items: center; gap: 64px; padding: 64px 80px; }
+#duvidas { height: 100vh; display: flex; align-items: center; gap: 64px; padding: 64px 80px; }
 
 .duvida { position: relative; }
 
@@ -39,7 +39,7 @@ span { font-weight: bold; }
 
 .duvida img { position: absolute; top: 32px; right: 24px; }
 
-.duvida .paragrafo { border-right: 1px solid #ff9b6c; border-bottom: 1px solid #ff9b6c; border-left: 1px solid #ff9b6c; border-radius: 0 0 8px 8px; margin-top: -8px; padding: 0px 24px; height: 0; overflow: hidden; opacity: 0;}
+.duvida .paragrafo { border-right: 1px solid #ff9b6c; border-bottom: 1px solid #ff9b6c; border-left: 1px solid #ff9b6c; border-radius: 0 0 8px 8px; margin-top: -8px; padding: 0px 24px; height: 0; overflow: hidden; opacity: 0; transition: .2s;}
 
 .duvida.ativa .paragrafo { height: fit-content; opacity: 1; padding: 24px; }
 
